feature : rememberMe 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,5 +8,16 @@
   <div class="container">
     Hello World!
   </div>
+
+<!--  <div class="login">-->
+<!--      <div>로그인</div>-->
+<!--      <form action="/members/login" method="POST">-->
+<!--          Email: <input type="text" name="email"> <br>-->
+<!--          PW: <input type="password" name="password"> <br>-->
+<!--          자동로그인 : <input type="checkbox"  id="remember-me" name="remember-me">-->
+<!--          <input type="submit" value="로그인">-->
+<!--      </form>-->
+<!--  </div>-->
+
 </body>
 </html>
