feature : rememberMe 구현

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="container">
-    <form class="form-signin" method="post" action="/members/login">
+    <form class="form-signin" method="POST" action="/members/login">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
-            <label for="username" class="sr-only">email</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="email" required="" autofocus="">
+            <label for="email" class="sr-only">email</label>
+            <input type="text" id="email" name="email" class="form-control" placeholder="email" required="" autofocus="">
         </p>
         <p>
             <label for="password" class="sr-only">Password</label>
