--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -5,12 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+
 <div class="container">
     <form class="form-signin" method="POST" action="/members/login">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
-            <label for="email" class="sr-only">email</label>
-            <input type="text" id="email" name="email" class="form-control" placeholder="email" required="" autofocus="">
+            <label for="email" class="sr-only">Email</label>
+            <input type="text" id="email" name="email" class="form-control" placeholder="Email" required="" autofocus="">
         </p>
         <p>
             <label for="password" class="sr-only">Password</label>
@@ -20,5 +21,16 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </div>
+
+<!--  <div class="login">-->
+<!--      <div>로그인</div>-->
+<!--      <form action="/members/login" method="POST">-->
+<!--          Email: <input type="text" name="email"> <br>-->
+<!--          PW: <input type="password" name="password"> <br>-->
+<!--          자동로그인 : <input type="checkbox"  id="remember-me" name="remember-me">-->
+<!--          <input type="submit" value="로그인">-->
+<!--      </form>-->
+<!--  </div>-->
+
 </body>
 </html>
