--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -20,6 +20,7 @@
         <p><input type="checkbox" name="remember-me"> Remember me on this computer.</p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
+    <div th:text="${errorMessage}">기본 메시지</div> <br/>
     <a href="/oauth2/authorization/google">Google Login</a>
 </div>
 
